# plone_skynetaccessibility_scanner

./: MANIFEST.in  README.rst  pyproject.toml
src/plone.skynetaccessibility_Scanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/plone/skynetaccessibility_Scanner/: configure.zcml  interfaces.py  setuphandlers.py
src/plone/skynetaccessibility_Scanner/browser/: configure.zcml  interfaces.py  scanner.pt  scanner.py  skynet_proxy.py
src/plone/skynetaccessibility_Scanner/browser/static/: skynet_scanner.css  skynet_scanner.js
src/plone/skynetaccessibility_Scanner/profiles/default/: browserlayer.xml  controlpanel.xml  metadata.xml  registry.xml
src/plone/skynetaccessibility_Scanner/profiles/uninstall/: browserlayer.xml  controlpanel.xml
